--- a/manifest.yml
+++ b/manifest.yml
@@ -3,5 +3,5 @@ applications:
   - name: postgresql-service-broker
 #    buildpack: java_buildpack
     env:
-      MASTER_JDBC_URL: jdbc:postgresql://192.168.6.172:5432/postgres?user=postgres&password=123
+      MASTER_JDBC_URL: 
       JAVA_OPTS: -Dsecurity.user.password=mysecret
